--- a/WorldBooksDesktop/WorldBooksDesktop.csproj
+++ b/WorldBooksDesktop/WorldBooksDesktop.csproj
@@ -260,9 +260,22 @@
     <Compile Include="MainPanel.Designer.cs">
       <DependentUpon>MainPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
+    <Compile Include="Service\UserService.cs" />
+    <Compile Include="UsuariosPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UsuariosPanel.Designer.cs">
+      <DependentUpon>UsuariosPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\DatabaseConnector.cs" />
+    <Compile Include="Utils\EnvHolder.cs" />
+    <Compile Include="Utils\ProjectColors.cs" />
+    <Compile Include="Utils\Response.cs" />
     <EmbeddedResource Include="LoginPanel.resx">
       <DependentUpon>LoginPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -279,6 +292,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UsuariosPanel.resx">
+      <DependentUpon>UsuariosPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -294,11 +310,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\received_1382317615190557.jpeg" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Docs\tables.sql" />
     <Content Include="ILLink\ILLink.Descriptors.LibraryBuild.xml" />
+    <Content Include="Resources\cancelar.png" />
+    <Content Include="Resources\editar-texto.png" />
+    <Content Include="Resources\excluir.png" />
+    <Content Include="Resources\marca-de-verificacao.png" />
+    <Content Include="Resources\porta.png" />
+    <Content Include="Resources\sinal-de-adicao.png" />
+    <Content Include="Resources\wb_icon.ico" />
     <None Include=".env">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
