--- a/WorldBooksDesktop/WorldBooksDesktop.csproj
+++ b/WorldBooksDesktop/WorldBooksDesktop.csproj
@@ -248,6 +248,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientesPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ClientesPanel.Designer.cs">
+      <DependentUpon>ClientesPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginPanel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -276,6 +282,7 @@
     <Compile Include="Utils\EnvHolder.cs" />
     <Compile Include="Utils\ProjectColors.cs" />
     <Compile Include="Utils\Response.cs" />
+    <EmbeddedResource Include="ClientesPanel.resx" />
     <EmbeddedResource Include="LoginPanel.resx">
       <DependentUpon>LoginPanel.cs</DependentUpon>
     </EmbeddedResource>
