--- a/WorldBooksDesktop/WorldBooksDesktop.csproj
+++ b/WorldBooksDesktop/WorldBooksDesktop.csproj
@@ -268,6 +268,12 @@
     </Compile>
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="ProdutosPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProdutosPanel.Designer.cs">
+      <DependentUpon>ProdutosPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ClientRepository.cs" />
@@ -285,12 +291,17 @@
     <Compile Include="Utils\EnvHolder.cs" />
     <Compile Include="Utils\ProjectColors.cs" />
     <Compile Include="Utils\Response.cs" />
-    <EmbeddedResource Include="ClientesPanel.resx" />
+    <EmbeddedResource Include="ClientesPanel.resx">
+      <DependentUpon>ClientesPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginPanel.resx">
       <DependentUpon>LoginPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainPanel.resx">
       <DependentUpon>MainPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProdutosPanel.resx">
+      <DependentUpon>ProdutosPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
