--- a/WorldBooksDesktop/WorldBooksDesktop.csproj
+++ b/WorldBooksDesktop/WorldBooksDesktop.csproj
@@ -267,6 +267,7 @@
       <DependentUpon>MainPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="ProdutosPanel.cs">
       <SubType>Form</SubType>
@@ -278,8 +279,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ClientRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Service\ClientService.cs" />
+    <Compile Include="Service\ProductService.cs" />
     <Compile Include="Service\UserService.cs" />
     <Compile Include="UsuariosPanel.cs">
       <SubType>Form</SubType>
