--- a/WorldBooksDesktop/WorldBooksDesktop.csproj
+++ b/WorldBooksDesktop/WorldBooksDesktop.csproj
@@ -254,6 +254,12 @@
     <Compile Include="ClientesPanel.Designer.cs">
       <DependentUpon>ClientesPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewSaleItemsPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewSaleItemsPanel.Designer.cs">
+      <DependentUpon>ViewSaleItemsPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginPanel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -306,6 +312,12 @@
     <Compile Include="Utils\EnvHolder.cs" />
     <Compile Include="Utils\ProjectColors.cs" />
     <Compile Include="Utils\Response.cs" />
+    <Compile Include="ViewSalesPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewSalesPanel.Designer.cs">
+      <DependentUpon>ViewSalesPanel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ClientesPanel.resx">
       <DependentUpon>ClientesPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -333,6 +345,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UsuariosPanel.resx">
       <DependentUpon>UsuariosPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewSaleItemsPanel.resx">
+      <DependentUpon>ViewSaleItemsPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewSalesPanel.resx">
+      <DependentUpon>ViewSalesPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
